# micropython_ota

./: .gitignore  README.md  micropython_ota.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
micropython_ota/: __init__.py  micropython_ota.py
sdist_upip/: sdist_upip.py
tests/: test_micropython_ota.py  urequests_mock.py
tests/mocks/: micropython_ota_mock.py  urequests_mock.py
